changed header and footer styles for responsive, fixed Cities.js cards alignment

--- a/src/styles/Cities.css
+++ b/src/styles/Cities.css
@@ -1,6 +1,7 @@
 .citiesPageContainer {
     display: flex;
     flex-flow: wrap;
+    justify-content: center;
     gap: 20px;
     padding: 20px 0;
     padding-top: 3rem;
@@ -52,70 +53,3 @@ input{
         justify-content: center;
     }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* .citiesContainer{
-    background-image: url('../avionWallpaper.jpg');
-    background-position: center;
-    background-size: cover;
-    background-attachment: fixed;
-    display: flex;
-    flex-flow: wrap column;
-    min-width: 100%;
-    gap: 20px;
-    padding: 20px 0;
-}
-.AllCity-container {
-    padding: 15px;
-    display: flex;
-    flex-flow: column;
-    width: 50vw;
-    height: 50vh;
-    background-color: whitesmoke;
-    box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.25);
-}
-
-.All-City-img {
-    height: 45vh;
-    object-fit: cover;
-}
-
-.City-text {
-    padding-top: 15px;
-    font-family: 'Permanent Marker';
-    font-size: x-large;
-} */
-
-
-
-
-
-/* .AllCity-container{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-}
-.All-City-img{
-    height: 20rem;
-    width: 40rem;
-}  */
