--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -46,3 +46,17 @@
   background-color: darkred;
   transition: ease-in-out 0.1s;
 }
+
+@media (max-width: 425px) {
+  .Footer-container {
+    width: 95%;
+    flex-flow: column-reverse;
+    gap: 10px;
+  }
+  .Footer-h5 {
+    text-align: center;
+  }
+  .Footer-p {
+    text-align: center;
+  }
+}
